--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name=".ChooseDateActivity"
+            android:name=".SelectDateActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -35,7 +35,7 @@
                 android:value=".SummaryActivity" />
         </activity>
         <activity
-            android:name=".ChooseWeekActivity"
+            android:name=".SelectWeekActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -43,7 +43,7 @@
                 android:value=".SummaryActivity" />
         </activity>
         <activity
-            android:name=".ChooseMonthActivity"
+            android:name=".SelectMonthYearActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -51,7 +51,7 @@
                 android:value=".SummaryActivity" />
         </activity>
         <activity
-            android:name=".ChooseYearActivity"
+            android:name=".SelectYearActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
@@ -64,7 +64,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ChooseDateActivity" />
+                android:value=".SelectDateActivity" />
         </activity>
         <activity
             android:name=".WeeklySummaryActivity"
@@ -72,7 +72,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ChooseWeekActivity" />
+                android:value=".SelectWeekActivity" />
         </activity>
         <activity
             android:name=".MonthlySummaryActivity"
@@ -80,7 +80,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ChooseMonthActivity" />
+                android:value=".SelectMonthYearActivity" />
         </activity>
         <activity
             android:name=".YearlySummaryActivity"
@@ -88,7 +88,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ChooseYearActivity" />
+                android:value=".SelectYearActivity" />
         </activity>
     </application>
 
