--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ExpenseActivity"
+            android:name=".MainActivities.ExpenseActivity"
             android:label="@string/app_name"
             >
             <intent-filter>
@@ -19,76 +19,76 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".IncomeActivity"
+            android:name=".MainActivities.IncomeActivity"
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name=".SummaryActivity"
+            android:name=".MainActivities.SummaryActivity"
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name=".SelectDateActivity"
+            android:name=".SelectActivities.SelectDateActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SummaryActivity" />
+                android:value=".MainActivities.SummaryActivity" />
         </activity>
         <activity
-            android:name=".SelectWeekActivity"
+            android:name=".SelectActivities.SelectWeekActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SummaryActivity" />
+                android:value=".MainActivities.SummaryActivity" />
         </activity>
         <activity
-            android:name=".SelectMonthYearActivity"
+            android:name=".SelectActivities.SelectMonthYearActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SummaryActivity" />
+                android:value=".MainActivities.SummaryActivity" />
         </activity>
         <activity
-            android:name=".SelectYearActivity"
+            android:name=".SelectActivities.SelectYearActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SummaryActivity" />
+                android:value=".MainActivities.SummaryActivity" />
         </activity>
         <activity
-            android:name=".DailySummaryActivity"
+            android:name=".SummaryActivities.DailySummaryActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectDateActivity" />
+                android:value=".SelectActivities.SelectDateActivity" />
         </activity>
         <activity
-            android:name=".WeeklySummaryActivity"
+            android:name=".SummaryActivities.WeeklySummaryActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectWeekActivity" />
+                android:value=".SelectActivities.SelectWeekActivity" />
         </activity>
         <activity
-            android:name=".MonthlySummaryActivity"
+            android:name=".SummaryActivities.MonthlySummaryActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectMonthYearActivity" />
+                android:value=".SelectActivities.SelectMonthYearActivity" />
         </activity>
         <activity
-            android:name=".YearlySummaryActivity"
+            android:name=".SummaryActivities.YearlySummaryActivity"
             android:label="@string/app_name">
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectYearActivity" />
+                android:value=".SelectActivities.SelectYearActivity" />
         </activity>
     </application>
 
