--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,23 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SelectActivities.SelectYearActivity" />
         </activity>
+        <activity
+            android:name=".SummaryActivities.DetailedSummaryActivity"
+            android:label="@string/app_name">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SelectActivities.SelectYearActivity"  />
+        </activity>
+        <activity
+            android:name=".Chart.ChartActivity"
+            android:label="@string/app_name">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SelectActivities.SelectYearActivity"  />
+        </activity>
+
     </application>
 
 </manifest>
