--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mingkie.simplepocketaccount">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,53 +9,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivities.ExpenseActivity"
-            android:label="@string/app_name"
-            >
+            android:name=".MainActivities.SummaryActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivities.IncomeActivity"
+            android:name=".MainActivities.ExpenseIncomeActivity"
             android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".MainActivities.SummaryActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".SelectActivities.SelectDateActivity"
-            android:label="@string/app_name">
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivities.SummaryActivity" />
-        </activity>
-        <activity
-            android:name=".SelectActivities.SelectWeekActivity"
-            android:label="@string/app_name">
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivities.SummaryActivity" />
-        </activity>
-        <activity
-            android:name=".SelectActivities.SelectMonthYearActivity"
-            android:label="@string/app_name">
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivities.SummaryActivity" />
-        </activity>
-        <activity
-            android:name=".SelectActivities.SelectYearActivity"
-            android:label="@string/app_name">
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivities.SummaryActivity" />
         </activity>
         <activity
             android:name=".SummaryActivities.DailySummaryActivity"
@@ -64,7 +26,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectActivities.SelectDateActivity" />
+                android:value=".EmptyActivity.EmptyActivity" />
         </activity>
         <activity
             android:name=".SummaryActivities.WeeklySummaryActivity"
@@ -72,7 +34,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectActivities.SelectWeekActivity" />
+                android:value=".EmptyActivity.EmptyActivity" />
         </activity>
         <activity
             android:name=".SummaryActivities.MonthlySummaryActivity"
@@ -80,7 +42,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectActivities.SelectMonthYearActivity" />
+                android:value=".EmptyActivity.EmptyActivity" />
         </activity>
         <activity
             android:name=".SummaryActivities.YearlySummaryActivity"
@@ -88,7 +50,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectActivities.SelectYearActivity" />
+                android:value=".EmptyActivity.EmptyActivity" />
         </activity>
         <activity
             android:name=".SummaryActivities.DetailedSummaryActivity"
@@ -96,7 +58,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectActivities.SelectYearActivity"  />
+                android:value=".EmptyActivity.EmptyActivity"  />
         </activity>
         <activity
             android:name=".Chart.ChartActivity"
@@ -104,9 +66,11 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SelectActivities.SelectYearActivity"  />
+                android:value=".EmptyActivity.EmptyActivity"  />
         </activity>
-
+        <activity
+            android:name=".EmptyActivity.EmptyActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
-
 </manifest>
